IE11 fix -- left align th

--- a/dsportal/static/style.css
+++ b/dsportal/static/style.css
@@ -248,6 +248,7 @@ table td {
 
 table > thead > tr > th {
     font-size:18px;
+    text-align:left; /* IE11 */
 }
 
 table th {
